-feature#3740: Ability to disable a site
-feature#3417: Add worst poller hosts to support page, log and email warning when poller time reached defined threshold
-feature#3845: Allow non-standard Remote Agent port to be used
-feature#3943: Add hooks for plugins to show customize graph source and customize template url (List View)
-feature#4296: Add hyperlink from graph edit page to graph-view
-feature#4300: Allow GPrint/CDef/VDef to be visibile in graph template item lists
-feature#4339: Change CLI progress output for rebuilding poller cache
-feature#5020: Introduce script timeout for cmd.php
-feature#5021: Allow form input validation to be reported to GUI
-feature#5025: Add Least Squares Special Data Types to Cacti
-feature#5027: Add Service Check Filter and Column and Device Thread Column

1.2.23
-security#4920: Add .htaccess file to scripts folder
-issue#4418: When using Single Signon Frameworks like SiteMinder Cacti does not properly detect ticket revocation in callbacks
-issue#4682: New templates are not installed during the update
-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error
-issue#4917: Under certain circumstances Real Time counter gets stuck and does not count down
-issue#4921: Aggregate Graph Permissions not working as expected