@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -feature#3417: Add worst poller hosts to support page, log and email warning when poller time reached defined threshold
 -feature#3845: Allow non-standard Remote Agent port to be used
 -feature#3943: Add hooks for plugins to show customize graph source and customize template url (List View)
+-feature#4202: Editing State=Down device - mark online when editing device when responding by all required probes
 -feature#4296: Add hyperlink from graph edit page to graph-view
 -feature#4300: Allow GPrint/CDef/VDef to be visibile in graph template item lists
 -feature#4339: Change CLI progress output for rebuilding poller cache
